@@ -18,6 +18,13 @@ pre {
 <body>
 <h1>ModelSpec howto - describing Jena 2.3 models in RDF</h1>
 
+<font color="red"><i>As of Jena 2.5, ModelSpec is deprecated 
+in favour of the Assembler subsystem.</i></font> 
+See the 
+<a href="../assembler/assembler-howto.html">assembler howto</a> 
+for a description of this new framework.
+
+<p>
 <font color="red"><i>WARNING.</i></font> The current ModelSpec
 API (including ModelMakers) and code suffers from some problems 
 which we hope to resolve in post-2.3 Jenas. Users of ModelSpec
